app/assets/stylesheets/responsive.scss
//-------------------------------------------------------------------------------
// 13. Responsive style
//-------------------------------------------------------------------------------

@media screen and (max-width: 1024px) {
  .bgwidth {
    height: 100%;
    width: auto;
  }
}

@media screen and (min-width: 1200px) {
  .work-year {
    height: 140px;
    padding-top: 50px;
    width: 140px;
  }

  .education .work-year {
    padding-top: 58px;
  }
}

@media screen and (max-width: 991px) {
  .navbar.navbar-inverse.navbar-static-top a {
    padding-left: 18px;
    padding-right: 18px;
  }

  header .banner-text {
    padding-left: 25px;
    padding-right: 25px;
  }

  header .banner-text h1 {
    font-size: 65px;
    line-height: 71px;
  }

  header .banner-text h2 {
    font-size: 28px;
  }

  .pro-pic {
    text-align: center;
  }

  .topmar {
    margin-top: 20px;
  }
}

@media screen and (max-width: 810px) {
  body {
    min-height: 700px;
  }

  header h3 {
    font-size: 38px;
  }

  header h3 span {
    font-size: 16px;
  }

  .navbar.navbar-inverse.navbar-static-top a {
    padding-left: 17px;
  }

  .topmar {
    margin-top: 20px;
  }
}

@media screen and (max-width: 768px) {
  .portfolio-container .col-xs-6 {
    min-height: 85px;
    width: 49%;
  }

  .topmar {
    margin-top: 20px;
  }
}

@media screen and (max-width: 767px) {
  .navbar-header {
    display: block;
  }

  .work-year {
    margin: 0 auto;
  }

  .work-details .right-area {
    border-left: 0;
  }

  .arrowpart {
    background: asset_url('website/arrow-top.png') no-repeat 50% 100%;
    float: none;
    height: 40px;
    width: 100%;
  }

  .education .arrowpart {
    background: asset_url('website/arrow-top-light.png') no-repeat 50% 100%;
  }

  .ex-con {
    margin-left: 0;
  }

  .navbar-nav li a {
    display: block;
  }

  .topmar {
    margin-top: 20px;
  }

  .i18n {
    left: 0;
    right: auto;

    li {
      margin-left: 8%;
      margin-right: 0;
    }
  }
}

@media screen and (max-width: 650px) {
  .wrapper {
    top: 200px;
  }

  .upbox {
    transform: translate(0, -70px);
  }

  header .banner-text {
    padding-bottom: 15px;
    padding-top: 15px;
    top: 20%;
  }

  header .banner-text h1 {
    font-size: 42px;
    line-height: 40px;
  }

  header .banner-text h2 {
    font-size: 15px;
    line-height: 24px;
    padding-top: 10px;
  }

  .topmar {
    margin-top: 20px;
  }
}

@media screen and (max-width: 480px) {
  .navbar.navbar-inverse.navbar-static-top a {
    line-height: 17px;
    padding-bottom: 11px;
    padding-top: 11px;
  }

  .topmar {
    margin-top: 20px;
  }
}

@media screen and (max-width: 400px) {
  .slides {
    height: 100%;
    min-height: 600px;
  }

  .item {
    width: 19%;
  }

  .item p {
    font-size: 36px;
  }

  .aboutme img {
    width: 100%;
  }

  .portfolio-container .col-xs-6 {
    width: 100%;
  }

  .bnt-download {
    font-size: 13px;
    padding: 16px 14px;
  }

  .topmar {
    margin-top: 20px;
  }
}

